# kgpt

./: CMakeLists.txt  README.md  main.cpp
qml/: Main.qml  Panel.qml  SettingsDialog.qml
resources/: panel.qrc
src/: HotkeyHelper.cpp  HotkeyHelper.h  PanelWindow.cpp  PanelWindow.h  SettingsManager.cpp  SettingsManager.h  main.cpp
